Add first spec functionality - roll dice and return a random number from 1 to 6 inclusive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h1>Pig Dice</h1>
+      <button type="button" id="roll" class="btn btn-primary">Roll Dice</button>
     </div>
   </body>
 </html>
