--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <h1>Pig Dice</h1>
       <button type="button" id="roll" class="btn btn-primary">Roll Dice</button>
+      <button type="button" id="hold" class="btn btn-danger">Hold</button>
     </div>
   </body>
 </html>
