add karma testing.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <input type="text" class="form-control" id="name2" required>
         <br>
         <button type="submit" class="btn btn-danger">Submit names</button>
-        <!-- <button type="button" id="cpu" class="btn btn-danger">Play CPU</button> -->
+
       </form>
       <h1>Pig Dice</h1>
         <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold":<br></p>
@@ -33,13 +33,13 @@
             <button type="button" id="hold" class="btn btn-danger">Hold</button>
           </div>
           <div class="row">
-            <img class="dice-faces" id="gif" src="img/diceroll.gif">
+            <!-- <img class="dice-faces" id="gif" src="img/diceroll.gif">
             <img id="face-1" class="dice-faces" src="img/dice-1.jpg">
             <img id="face-2" class="dice-faces" src="img/dice-2.jpg">
             <img id="face-3" class="dice-faces" src="img/dice-3.jpg">
             <img id="face-4" class="dice-faces" src="img/dice-4.jpg">
             <img id="face-5" class="dice-faces" src="img/dice-5.jpg">
-            <img id="face-6" class="dice-faces" src="img/dice-6.jpg">
+            <img id="face-6" class="dice-faces" src="img/dice-6.jpg"> -->
           </div>
         </div>
         <div class="col col-md">
